compiler/testData/launcher/withNonAsciiSymbols.kt
package test

class `My⋅Class`
object Símbolo
val `a⋅b`: `My⋅Class` = null
val í: Símbolo = null
fun føø()
